--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["@babel/preset-typescript", "@babel/preset-react", "@babel/preset-env"],
-  "plugins": []
+  "plugins": ["@babel/plugin-proposal-class-properties"]
 }
