--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "thread-loader": "^3.0.1",
     "typescript": "^4.1.3",
     "webpack": "^5.14.0",
