--- a/.eslintrc
+++ b/.eslintrc
@@ -1,36 +1,16 @@
 {
-  "extends": ["airbnb", "prettier", "prettier/react"],
+  "extends": [
+    "plugin:@typescript-eslint/recommended",
+    "prettier",
+    "prettier/react"
+  ],
   "parser": "@typescript-eslint/parser",
   "plugins": ["react-hooks", "@typescript-eslint"],
   "rules": {
-    "prefer-object-spread": "off",
-    "consistent-return": "off",
-    "no-lonely-if": "off",
-    "class-methods-use-this": "off",
-    "dot-notation": "off",
-    "no-console": "off",
-    "no-alert": "off",
-    "global-require": "off",
-    "jsx-a11y/no-static-element-interactions": "off",
-    "jsx-a11y/click-events-have-key-events": "off",
-    "react/prefer-stateless-function": "off",
-    "react/forbid-prop-types": "off",
-    "react/sort-comp": "off",
-    "react/no-did-update-set-state": "off",
-    "react/static-property-placement": "off",
-    "react/self-closing-comp": "off",
-    "react/no-find-dom-node": "off",
-    "import/no-unresolved": "off",
-    "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn",
-    "jsx-a11y/no-noninteractive-element-interactions": "off",
-    "import/extensions": "off",
-    "react/jsx-props-no-spreading": "off",
-    "no-plusplus": "off",
-    "no-underscore-dangle": "off",
-    "no-unused-vars": "off",
-    // 扩展文件后缀eslint
-    "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
+    // 方法必须写返回类型
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    // 禁止使用any
+    "@typescript-eslint/no-explicit-any": "off",
     "indent": [
       "warn",
       2,
@@ -38,9 +18,11 @@
         "SwitchCase": 1
       }
     ],
-    "no-nested-ternary": "off",
-    "react/no-danger": "off",
-    "import/order": "off",
+    // 非空判断
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "semi": "error",
+    // 禁止直接使用全局方法
+    "no-restricted-globals": "off"
   },
   "globals": {
     "window": true,
