--- a/package.json
+++ b/package.json
@@ -35,17 +35,24 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
+    "antd": "^4.11.2",
+    "autoprefixer": "^10.2.4",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.1",
     "fork-ts-checker-notifier-webpack-plugin": "^3.0.0",
     "fork-ts-checker-webpack-plugin": "^6.1.0",
     "history": "^5.0.0",
     "html-webpack-plugin": "^4.5.1",
+    "less": "^4.1.1",
+    "less-loader": "^7.3.0",
     "mini-css-extract-plugin": "^1.3.4",
+    "postcss-loader": "^4.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "style-loader": "^2.0.0",
     "thread-loader": "^3.0.1",
     "typescript": "^4.1.3",
     "webpack": "^5.14.0",
@@ -56,6 +63,8 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "eslint": "^6.8.0",
